tdf#76446 GSoC: incorrect rotation of VML shapes

* support poorly documented 'fd' suffix in rotation attribute
* allow non-integer rotation

Change-Id: I3d72f2a708e6585597db09366c00c50038abc9c1
Reviewed-on: https://gerrit.libreoffice.org/38207
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>